namespace Modeler.ComponentsModel;

public class DependencyComponentRelationship : ComponentRelationship
{
    public DependencyComponentRelationship(Component source, Component target) : base(source, target)
    {
    }
}