namespace Modeler.ComponentsModel;

public class UsageComponentRelationship : ComponentRelationship
{
    public UsageComponentRelationship(Component source, Component target) : base(source, target)
    {
    }
}